[project]
name = "langgraph-scaffoldings"
version = "0.1.0"
description = "Scaffolding code using langgraph and related libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.0",
    "fastapi>=0.120.4",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.2",
    "langchain-experimental>=0.0.42",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.2",
    "langsmith>=0.4.39",
    "pydantic>=2.12.3",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "streamlit>=1.51.0",
    "tabulate>=0.9.0",
    "uvicorn>=0.38.0",
]
